--- a/build.gradle
+++ b/build.gradle
@@ -10,10 +10,14 @@ repositories {
 }
 
 dependencies {
-	compileOnly 'org.codehaus.groovy:groovy-all:3.0.0-rc-1'
-	compileOnly 'com.github.cufyorg:util:0.0.1'
-	complleOnly 'com.github.cufyorg:base:0.0.2'
+	compileOnly 'org.codehaus.groovy:groovy-all:3.0.0-rc-3'
+	compileOnly 'com.github.cufyorg:util:0.0.5-beta3'
+	compileOnly 'com.github.cufyorg:base:0.0.5-beta7'
 
+	testImplementation 'org.codehaus.groovy:groovy-all:3.0.0-rc-3'
+	testImplementation 'com.github.cufyorg:util:0.0.5-beta3'
+	testImplementation 'com.github.cufyorg:base:0.0.5-beta7'
+	testImplementation 'com.github.cufyorg:json:0.0.5-beta1'
 	testImplementation 'junit:junit:4.11'
 }
 
