--- a/build.gradle
+++ b/build.gradle
@@ -10,11 +10,11 @@ repositories {
 }
 
 dependencies {
-	compileOnly 'org.codehaus.groovy:groovy-all:3.0.0-rc-3'
+	compileOnly 'org.codehaus.groovy:groovy-all:3.0.0'
 	compileOnly 'com.github.cufyorg:util:0.0.6'
 	compileOnly 'com.github.cufyorg:base:0.0.6'
 
-	testImplementation 'org.codehaus.groovy:groovy-all:3.0.0-rc-3'
+	testImplementation 'org.codehaus.groovy:groovy-all:3.0.0'
 	testImplementation 'com.github.cufyorg:util:0.0.6'
 	testImplementation 'com.github.cufyorg:base:0.0.6'
 	testImplementation 'com.github.cufyorg:json:0.0.6'
