--- a/build.gradle
+++ b/build.gradle
@@ -14,6 +14,8 @@ dependencies {
 	compileOnly 'com.github.cufyorg:util:0.0.8'
 	compileOnly 'com.github.cufyorg:base:0.0.8'
 
+	File e
+
 	testImplementation 'org.codehaus.groovy:groovy-all:3.0.0'
 	testImplementation 'com.github.cufyorg:util:0.0.8'
 	testImplementation 'com.github.cufyorg:base:0.0.8'
