--- a/build.gradle
+++ b/build.gradle
@@ -9,13 +9,11 @@ repositories {
 }
 
 dependencies {
-	compileOnly 'com.github.cufyorg:util:0.1.0-beta2'
-	compileOnly 'com.github.cufyorg:base:0.1.0-beta4'
+	compileOnly 'com.github.cufyorg:util:0.1.0'
+	compileOnly 'com.github.cufyorg:base:0.1.0'
 
-	testImplementation 'com.github.cufyorg:util:0.1.0-beta2'
-	testImplementation 'com.github.cufyorg:base:0.1.0-beta4'
-	testImplementation 'com.github.cufyorg:text:0.1.0-beta0'
-	testImplementation 'com.github.cufyorg:json:0.1.0-beta2'
+	testImplementation 'com.github.cufyorg:util:0.1.0'
+	testImplementation 'com.github.cufyorg:base:0.1.0'
 	testImplementation 'junit:junit:4.11'
 }
 
